FastExpand bot should fix issues with WarriorBot